# NongMolAgentOS

./: .gitignore  aapt2-fixed.sh  build.gradle  fix_and_deploy.sh  gradle.properties  gradlew  settings.gradle  setup_system.sh
$PROJECT_DIR/res/xml/: accessibility_config.xml
.github/workflows/: android-build.yml  android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  future_bridge.h  native-lib.cpp  nongmol-core.cpp
app/src/main/java/com/example/nongmolagentos/: MainActivity.kt
app/src/main/java/com/example/nongmolagentos/ai/: HybridRouter.kt  InferenceEngine.kt  MemoryStore.kt
app/src/main/java/com/example/nongmolagentos/service/: OverlayUI.kt  TaskPlanner.kt  UiParser.kt
app/src/main/java/com/example/nongmolagentos/utils/: FileUtils.kt  PermissionHelper.kt
app/src/main/java/com/nongmol/agent/v2/: AgentAccessibilityService.java  AgentService.java  LlamaEngine.java  MainActivity.java  NongMolHandService.java
app/src/main/java/com/nongmol/agent/v8/: MainActivity.java
app/src/main/res/drawable/: glass_panel.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: accessibility_config.xml  accessibility_service_config.xml
internal-bin/: aapt2
nongmol-core/: build.gradle
nongmol-core/src/main/java/com/nongmol/core/: NativeLoader.java  NongMolCenter.kt  NongMolCommander.java  NongMolCore.kt  NongMolSoul.java  TeacherEngine.java
(+4 files in other folders)
